syntax = "proto3";

option go_package = "todoPb";

service ToDo {
  rpc CreateToDo (ToDoContent) returns (ToDoDetail) {}
}

message ToDoContent {
  int64 id = 1;
  string content = 2;
  int64 datetime = 3;
}

message ToDoDetail {
  int64 id = 1;
  string content = 2;
  int64 datetime = 3;
  int64 created = 4;
  int64 updated = 5;
}